--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <h1 class="title-t4">2023 신년계획</h1>
     <p class="msg">올해는 꼭 모두 지키자!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t2 center done">나의 웹페이지 만들기</div>
+        <div class="bucket img1-t2 center done">나만의 웹페이지 만들기</div>
         <div class="bucket img2 center">운동하기</div>
         <div class="bucket img2 center">가족이랑 여행가기</div>
         <div class="bucket img1-t4 center">그림 그리기</div>
